--- a/Prefs/Makefile
+++ b/Prefs/Makefile
@@ -1,10 +1,14 @@
+ARCHS = arm64 arm64e
+TARGET := iphone:clang:latest:15.0
+
 include $(THEOS)/makefiles/common.mk
 
 BUNDLE_NAME = InstanceXPrefs
-InstanceXPrefs_FILES = IXRootListController.m
-InstanceXPrefs_INSTALL_PATH = /Library/PreferenceBundles
-InstanceXPrefs_FRAMEWORKS = UIKit
+
+InstanceXPrefs_FILES = $(wildcard *.m)
+InstanceXPrefs_FRAMEWORKS = UIKit Preferences
 InstanceXPrefs_PRIVATE_FRAMEWORKS = Preferences
+InstanceXPrefs_INSTALL_PATH = /Library/PreferenceBundles
 InstanceXPrefs_CFLAGS = -fobjc-arc
 
 include $(THEOS_MAKE_PATH)/bundle.mk
